# Siexgran-DSL-Lab

./: README.md
Siex-DSL-Minimal/: .gitignore  CMakeLists.txt  README.md  dummy_build.siex
Siex-DSL-Minimal/.cache/clangd/index/: arena.c.6B7009E17A45B49C.idx  arena.h.8AD4CA2867CA7C1C.idx  common.h.091A46F05029BE0F.idx  diagnostic.c.9A197C9278D02DEB.idx  diagnostic.h.BF0F00424D8B2B33.idx  ir.h.5A4D3DDFCA37AEB8.idx  lexer.c.BC1A8753E6C05799.idx  lexer.h.B3B8E65755C063E6.idx  parser.c.FE7BC517BE059C11.idx  parser.h.3FA5272171DA5540.idx  token.h.62D726F64E03E31E.idx  vector.h.0E544152FC56A030.idx
Siex-DSL-Minimal/docs/: dependency_strategy.md  dsl_design.md  grammar.ebnf  grammar.md
Siex-DSL-Minimal/examples/: dummy.siex
Siex-DSL-Minimal/include/: siex-dsl-diagnostic.h  siex-dsl-lexer.h  siex-dsl-token.h
Siex-DSL-Minimal/include/siex-dsl/: common.h  diagnostic.h  ir.h  lexer.h  parser.h  parser_internal.h  token.h  vector.h
Siex-DSL-Minimal/include/siex-dsl/core/: arena.h  diagnostic.h  hashmap.h  namespace.h  path.h  symbol.h  vector.h
Siex-DSL-Minimal/include/siex-dsl/frontend/: lexer.h  loader.h  parser.h  parser_internal.h  token.h
Siex-DSL-Minimal/include/siex-dsl/ir/: ir.h  resolved_ir.h
Siex-DSL-Minimal/source/: arena.c  diagnostic.c  lexer.c  siex-dsl-lexer.c  vector.c
Siex-DSL-Minimal/source/core/: arena.c  diagnostic.c  hashmap.c  namespace.c  vector.c
Siex-DSL-Minimal/source/frontend/: lexer.c  loader.c
Siex-DSL-Minimal/source/parser/: parser.c  parser_internal.c
Siex-DSL-Minimal/source/utils/: filesystem_linux.c  filesystem_windows.c
(+21 files in other folders)
